; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_spa_checkpoint.c_spa_checkpoint_discard_sync.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_spa_checkpoint.c_spa_checkpoint_discard_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }

@DMU_POOL_DIRECTORY_OBJECT = common dso_local global i32 0, align 4
@DMU_POOL_ZPOOL_CHECKPOINT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"spa discard checkpoint\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"started discarding checkpointed state from the pool\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @spa_checkpoint_discard_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spa_checkpoint_discard_sync(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call %struct.TYPE_6__* @dmu_tx_pool(i32* %6)
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  store %struct.TYPE_5__* %9, %struct.TYPE_5__** %5, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = call i32 @spa_meta_objset(%struct.TYPE_5__* %10)
  %12 = load i32, i32* @DMU_POOL_DIRECTORY_OBJECT, align 4
  %13 = load i32, i32* @DMU_POOL_ZPOOL_CHECKPOINT, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @zap_remove(i32 %11, i32 %12, i32 %13, i32* %14)
  %16 = call i32 @VERIFY0(i32 %15)
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @zthr_wakeup(i32 %21)
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @spa_history_log_internal(%struct.TYPE_5__* %23, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32* %24, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local %struct.TYPE_6__* @dmu_tx_pool(i32*) #1

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @zap_remove(i32, i32, i32, i32*) #1

declare dso_local i32 @spa_meta_objset(%struct.TYPE_5__*) #1

declare dso_local i32 @zthr_wakeup(i32) #1

declare dso_local i32 @spa_history_log_internal(%struct.TYPE_5__*, i8*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
